fix(combobox): align the chevron icon to be centered vertically on multiple chips select mode (#3055)

--- a/src/components/calcite-combobox/calcite-combobox.scss
+++ b/src/components/calcite-combobox/calcite-combobox.scss
@@ -37,13 +37,11 @@
 
 .wrapper {
   @apply flex
-    flex-wrap
     bg-foreground-1
     text-color-1
     focus-base;
   box-shadow: inset 0 0 0 1px var(--calcite-ui-border-input);
-  padding: var(--calcite-combobox-item-spacing-unit-s) var(--calcite-combobox-item-spacing-unit-l) 0
-    var(--calcite-combobox-item-spacing-unit-l);
+  padding: 0 var(--calcite-combobox-item-spacing-unit-l) 0 var(--calcite-combobox-item-spacing-unit-l);
 }
 
 :host(:focus-within) .wrapper,
@@ -54,6 +52,12 @@
 .wrapper--single {
   padding: 0 var(--calcite-combobox-item-spacing-unit-l);
   @apply cursor-pointer flex-no-wrap;
+}
+
+.grid-input {
+  @apply flex flex-grow flex-wrap items-center;
+  padding: 0;
+  margin: calc(var(--calcite-combobox-item-spacing-unit-s) / 2) 0;
 }
 
 .input {
@@ -130,6 +134,10 @@
     w-4;
 }
 
+.icon-end {
+  @apply flex-none;
+}
+
 .popper-container {
   @apply w-full;
   @include popperContainer();
@@ -162,8 +170,8 @@
 }
 
 .chip {
-  margin-right: var(--calcite-combobox-item-spacing-unit-s);
-  margin-bottom: var(--calcite-combobox-item-spacing-unit-s);
+  margin: calc(var(--calcite-combobox-item-spacing-unit-s) / 2) var(--calcite-combobox-item-spacing-unit-s)
+    calc(var(--calcite-combobox-item-spacing-unit-s) / 2) 0;
   max-width: 100%;
 }
 
